--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    background-size: cover;
     font-family: sans-serif;
     font-weight: bold;
     text-align: center;
@@ -15,7 +16,7 @@ body {
 
 .container {
     background-color: aliceblue;
-    max-width: 20%;
+    max-width: 25%;
     margin: auto;
     border: 3px solid black;
     border-radius: 10px;
